--- a/css/AddressBookForm.css
+++ b/css/AddressBookForm.css
@@ -69,15 +69,57 @@ body {
     height: 108px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: right;
     font: normal normal normal 28px/37px Roboto;
     letter-spacing: 0px;
+    color: #fff;
     background-color: #008CFF;
     text-transform: uppercase;
     opacity: 1;
     align-items: center;
 }
 
-.cancel-button {
-    width: 50px;
+#img {
+    padding-left: 290px;
+    padding-right: 40px;
+}
+
+.row-content {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+    align-items: center;
+    border: 0px solid green;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+}
+
+.text {
+    text-align: left;
+    font: normal normal normal 18px/24px Roboto;
+    letter-spacing: 0px;
+    color: #42515F;
+    opacity: 1;
+}
+
+.input {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+}
+
+.input-content {
+    width: 300px;
+    margin-right: 10px;
 }
